--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -35,31 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/java-g06
 endorsed.classpath=
 excludes=
-file.reference.javafx-swt.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx-swt.jar
-file.reference.javafx.base.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx.base.jar
-file.reference.javafx.controls.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx.controls.jar
-file.reference.javafx.fxml.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx.fxml.jar
-file.reference.javafx.graphics.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx.graphics.jar
-file.reference.javafx.media.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx.media.jar
-file.reference.javafx.swing.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx.swing.jar
-file.reference.javafx.web.jar=C:\\Program Files\\Java\\javafx-sdk-12\\lib\\javafx.web.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.javafx.base.jar}:\
-    ${file.reference.javafx.controls.jar}:\
-    ${file.reference.javafx.fxml.jar}:\
-    ${file.reference.javafx.graphics.jar}:\
-    ${file.reference.javafx.media.jar}:\
-    ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=\
-    ${libs.JavaFX11.classpath}
+javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -67,7 +50,8 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -90,11 +74,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=java-g06
-main.class=
+main.class=main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_12
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
