--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -35,9 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/java-g06
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-all-1.3.jar=C:\\Users\\bono-\\Downloads\\hamcrest-all-1.3.jar
+file.reference.junit-4.13-beta-2.jar=C:\\Users\\bono-\\Downloads\\junit-4.13-beta-2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.13-beta-2.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=11
-javac.target=11
+javac.source=12
+javac.target=12
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
