--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -35,13 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/java-g06
 endorsed.classpath=
 excludes=
-file.reference.hamcrest-all-1.3.jar=C:\\Users\\bono-\\Downloads\\hamcrest-all-1.3.jar
-file.reference.junit-4.13-beta-2.jar=C:\\Users\\bono-\\Downloads\\junit-4.13-beta-2.jar
+file.reference.hamcrest-all-1.3.jar=../hamcrest-all-1.3.jar
+file.reference.junit-4.13-beta-2.jar=../junit-4.13-beta-2.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.junit-4.13-beta-2.jar}:\
-    ${file.reference.hamcrest-all-1.3.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +53,11 @@ javac.target=12
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${libs.junit_5.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.junit-4.13-beta-2.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
