--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -36,10 +37,15 @@ dist.jlink.output=${dist.jlink.dir}/java-g06
 endorsed.classpath=
 excludes=
 file.reference.hamcrest-all-1.3.jar=../hamcrest-all-1.3.jar
+file.reference.javax.annotation-api-1.3.2.jar=../javax.annotation-api-1.3.2.jar
 file.reference.junit-4.13-beta-2.jar=../junit-4.13-beta-2.jar
+file.reference.mssql-jdbc-7.2.1.jre11.jar=../sqljdbc_7.2/enu/mssql-jdbc-7.2.1.jre11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.mssql-jdbc-7.2.1.jre11.jar}:\
+    ${file.reference.javax.annotation-api-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,7 +53,8 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=12
 javac.target=12
 javac.test.classpath=\
@@ -80,7 +87,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=java-g06
-main.class=main
+main.class=test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
