--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -36,39 +36,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/java-g06
 endorsed.classpath=
 excludes=
-file.reference.javafx-swt.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx-swt.jar
-file.reference.javafx.base.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.base.jar
-file.reference.javafx.controls.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.controls.jar
-file.reference.javafx.fxml.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.fxml.jar
-file.reference.javafx.graphics.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.graphics.jar
-file.reference.javafx.media.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.media.jar
-file.reference.javafx.swing.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.swing.jar
-file.reference.javafx.web.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.web.jar
 file.reference.javax.annotation-api-1.3.2.jar=../Libs/javax.annotation-api-1.3.2.jar
 file.reference.junit-4.13-beta-2.jar-1=../Libs/junit-4.13-beta-2.jar
 file.reference.mssql-jdbc-7.2.1.jre11.jar=../Libs/sqljdbc_7.2/enu/mssql-jdbc-7.2.1.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javafx.base.jar}:\
-    ${file.reference.javafx.controls.jar}:\
-    ${file.reference.javafx.fxml.jar}:\
-    ${file.reference.javafx.graphics.jar}:\
-    ${file.reference.javafx.media.jar}:\
-    ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar}:\
     ${libs.eclipselink.classpath}:\
     ${libs.hamcrest.classpath}:\
     ${file.reference.javax.annotation-api-1.3.2.jar}:\
     ${file.reference.junit-4.13-beta-2.jar-1}:\
-    ${file.reference.mssql-jdbc-7.2.1.jre11.jar}
+    ${file.reference.mssql-jdbc-7.2.1.jre11.jar}:\
+    ${libs.JavaFX11.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=\
-    ${libs.JavaFX11_2.classpath}
+javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}:\
