[Feat] Domeinklassen Lesmateriaal

--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/java-g06
 endorsed.classpath=
 excludes=
+file.reference.cloudinary-core-1.22.1.jar=../Libs/cloudinary-core-1.22.1.jar
 file.reference.javafx-swt.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx-swt.jar
 file.reference.javafx.base.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.base.jar
 file.reference.javafx.controls.jar=../Libs/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib/javafx.controls.jar
@@ -62,7 +63,8 @@ javac.classpath=\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
     ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar}
+    ${file.reference.javafx-swt.jar}:\
+    ${file.reference.cloudinary-core-1.22.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
