--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -69,8 +69,7 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=\
-    ${libs.JavaFX11_2.classpath}
+javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}:\
@@ -109,14 +108,14 @@ main.class=StartUp.StartUp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_12
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--add-modules=javafx.controls,javafx.fxml
+run.jvmargs=--module-path "D:\\software\\openjfx-11.0.2_windows-x64_bin-sdk\\javafx-sdk-11.0.2\\lib" --add-modules=javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
