[Feat] Verwerking feedback + validatie

--- a/java-g06/nbproject/project.properties
+++ b/java-g06/nbproject/project.properties
@@ -69,7 +69,8 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${libs.JavaFX11_2.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}:\
